--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.7.1",
     "react-medium-image-zoom": "^5.1.10",
     "react-scripts": "5.0.1",
