updates and fixes

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "next": "^13.1.6",
+    "next": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-icons": "^4.7.1",
     "react-medium-image-zoom": "^5.1.10",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "react-transition-group": "^4.4.5",
     "swiper": "^8.4.7",
     "web-vitals": "^2.1.4"
